--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="result">
-            <div class="element"></div>
+            <div id="element"></div>
         </div>
         <div class="sliders">
             <div class="slider-wrapper">
@@ -36,7 +36,7 @@
             </div>
             <div class="slider-wrapper">
                 <label for="shadow-color-opacity">Shadow Color Opacity:</label>
-                <input type="range" id="shadow-color-opacity" min="0" max="1" value="0" step="0.1" class="slider">
+                <input type="range" id="shadow-color-opacity" min="0" max="1" value="1" step="0.1" class="slider">
             </div>
             <div class="input-wrapper">
                 <label for="shadow-inset">Inset Shadow</label>
